@@ -1,2 +1,2 @@
-VERSION=7.17.00
+VERSION=7.18.00
 YEARS=1992-2012
